--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,34 +74,102 @@
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
+	
+	box-sizing: border-box;
+	
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	
+	-webkit-user-drag: none;
+	-khtml-user-drag: none;
+	-moz-user-drag: none;
+	-o-user-drag: none;
+	user-drag: none;
+	
+	pointer-events: revert;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	max-width: 100vw;
+	overflow-x: hidden;
+	font-size: 10px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+/* Custom CSS */
+.icon {
+	display: flex;
+	align-items: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.icon > .icon_md:not(:last-child) {
+	margin-right: 8px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+.icon_sm,
+.icon_md
+.icon_lg { 
+	width: 22px;
+	height: 100%;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon_sm img { width: 22px; height: 22px; }
+.icon_sm:hover { background-color: #FFFFFF; }
+
+.icon_md {
+	height: 32px;
+	width: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	border-radius: 2px;
+}
+.icon_md img {
+	height: 22px;
+	width: 22px;
+	transition-duration: .15s;
+}
+.icon_md:active img {
+	transform: scale(0.75);
+}
+.icon_md:hover { background-color: #FFFFFF; }
+.icon_lg {
+	
+}
+
+
+.wallpaper {
+	/* height: calc(100vh - 42px); */
+	height: 100vh;
+	overflow: hidden;
+}
+
+
+.flex_row {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex_column {
+	display: flex;
+	flex-direction: column;
+}
+
+.flex_object {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+	width: 100%;
+	height: 100%;
 }
